--- a/app/assets/styles/components/header.scss
+++ b/app/assets/styles/components/header.scss
@@ -1,5 +1,10 @@
 .header-wrap {
     padding: toRem(21) toRem(30);
     background-color: $light-gold;
-    box-shadow: 0 toRem(4) toRem(50) toRem(-10) rgba(0,0,0,0.5);
+    color: #fff;
+    h1 {
+        font-size: 20px;
+        text-align: center;
+        margin: 0;
+    }
 }
