--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -382,3 +382,27 @@ body, p {
         left: 0;
     }
 }
+
+.side-block {
+	background: #fff;
+	box-shadow: 0 0.125rem 1.25rem 0 rgba(0, 0, 0, 0.15);
+	padding: 20px;
+    border-radius: 4px;
+	h2 {
+		font-size: 20px;
+	}
+	.item {
+		border: 1px solid #ccc;
+		padding: 10px;
+		border-radius: 4px;
+		.count {
+			font-size: 24px;
+			color: #6b85de;
+			display: block;
+		}
+	}
+}
+
+.table-block {
+	padding: 10px;
+}
